; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_chroma/extr_d3d9_fmt.c_ActiveD3D9PictureSys.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_chroma/extr_d3d9_fmt.c_ActiveD3D9PictureSys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32* }
%struct.d3d9_pic_context = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ActiveD3D9PictureSys(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.d3d9_pic_context*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = icmp eq i32* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i64 @unlikely(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %2, align 8
  br label %23

16:                                               ; preds = %1
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = call %struct.d3d9_pic_context* @D3D9_PICCONTEXT_FROM_PICCTX(i32* %19)
  store %struct.d3d9_pic_context* %20, %struct.d3d9_pic_context** %4, align 8
  %21 = load %struct.d3d9_pic_context*, %struct.d3d9_pic_context** %4, align 8
  %22 = getelementptr inbounds %struct.d3d9_pic_context, %struct.d3d9_pic_context* %21, i32 0, i32 0
  store i32* %22, i32** %2, align 8
  br label %23

23:                                               ; preds = %16, %12
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local %struct.d3d9_pic_context* @D3D9_PICCONTEXT_FROM_PICCTX(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
